Fixes and Updates Fix: Harden setup loader, widen description column, and migrate fixture API.
SetupDataLoader: Replace RoleNotFoundException with orElseGet so the admin role is auto-created on first boot instead of throwing.
Supply-compose.yaml: Align POSTGRES_DB name with app config (bluesupplydb).
RequestCategory.description: Widen column length from 40 → 50.
DepartmentService: Log only department name to avoid leaking full DTO.
RequestCategoryService: Minor internal cleanup (no behaviour change).
Replace RequestCategoryFixtureDto with RequestCategoryDtoFixture using a Lombok @With builder API; update RequestCategoryControllerTest accordingly.
Add NameValidatorTest covering valid/invalid name inputs.